# strictfmt

./: .cpp-format  .cpp-format-ignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  devenv.cmd
docs/: build.md  format.md
include/strictfmt/: cli.h
scripts/: build.cmd  build.sh  build_unix.sh  build_windows.cmd  test.sh
src/: strictfmt_main.cpp
src/tools/: format.cpp  format.h  format_cli.cpp  format_model_dump.cpp  format_model_dump.h  strictfmt_cli.cpp
src/tools/impl/: format_args.cpp  format_args.h  format_break_model.cpp  format_break_model.h  format_break_model_builder.cpp  format_break_model_builder.h  format_break_model_inline_helpers.h  format_break_solver.cpp  format_break_solver.h  format_config.cpp  format_config.h  format_include_sort.cpp  format_include_sort.h  format_model.cpp  format_model.h  format_model_builder.cpp  format_model_builder.h  format_model_parse.cpp  format_model_parse.h  format_pretty_printer.cpp  format_pretty_printer.h  format_spacing.cpp  format_spacing.h  tools_common.cpp  tools_common.h  tools_parallel.cpp  tools_parallel.h  tools_progress.cpp  tools_progress.h
src/util/: file_path.cpp  file_path.h  strings.cpp  strings.h  text_encoding.cpp  text_encoding.h
tests/format/: .cpp-format  .cpp-format-userver  format_test.py
tests/format/src/: format_error_input.cpp  format_error_output.txt  format_ifdef_input.cpp  format_ifdef_output.cpp  format_test_input.cpp  format_test_output.cpp  format_userver_input.cpp  format_userver_output.cpp
tools/: regenerate_tree_sitter_grammar.py
